Attempt to fix flicker on initial load

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -26,6 +26,10 @@ body {
     background-color: colors.$white;
   }
 
+  .react-reveal {
+    opacity: 0;
+  }
+
   h1,
   h2,
   h3,
